<resources>
    <string name="app_name">Trener organisty</string>

    <string name="navigation_drawer_open">Otwórz wysuwane menu</string>
    <string name="navigation_drawer_close">Zamknij wysuwane menu</string>

    <!-- Drawer menu -->
    <string name="invocation_title">Wezwania</string>
    <string name="invocations_sets_title">Zestawy wezwań</string>
    <string name="statistics_title">Statystyki</string>
    <string name="settings_title">Ustawienia</string>
    <string name="send_opinion_title">Prześlij opinie</string>
    <string name="about_app_title">O aplikacji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
